crates/core/talkbank-parser/src/parser/chat_file_parser/single_item/tests/word/tests/snapshots/word_parsing_tests__word_with_form_type.snap
---
source: crates/talkbank-parser/src/parser/chat_file_parser/single_item/tests/word/helpers.rs
expression: result
---
Ok(
    Word {
        span: Span {
            start: 0,
            end: 7,
        },
        word_id: None,
        raw_text: "hello@b",
        content: WordContents(
            [
                Text(
                    WordText(
                        NonEmptyString(
                            "hello",
                        ),
                    ),
                ),
            ],
        ),
        category: None,
        form_type: Some(
            B,
        ),
        lang: None,
        part_of_speech: None,
        inline_bullet: None,
        cached_cleaned_text: CachedStr(
            OnceLock(
                "hello",
            ),
        ),
    },
)
