crates/core/talkbank-parser/src/parser/chat_file_parser/single_item/tests/word/tests/snapshots/word_parsing_tests__word_with_multiple_shortenings.snap
---
source: crates/talkbank-parser/src/parser/chat_file_parser/single_item/tests/word/helpers.rs
expression: result
---
Ok(
    Word {
        span: Span {
            start: 0,
            end: 9,
        },
        word_id: None,
        raw_text: "h(e)l(lo)",
        content: WordContents(
            [
                Text(
                    WordText(
                        NonEmptyString(
                            "h",
                        ),
                    ),
                ),
                Shortening(
                    WordShortening(
                        NonEmptyString(
                            "e",
                        ),
                    ),
                ),
                Text(
                    WordText(
                        NonEmptyString(
                            "l",
                        ),
                    ),
                ),
                Shortening(
                    WordShortening(
                        NonEmptyString(
                            "lo",
                        ),
                    ),
                ),
            ],
        ),
        category: None,
        form_type: None,
        lang: None,
        part_of_speech: None,
        inline_bullet: None,
        cached_cleaned_text: CachedStr(
            OnceLock(
                "hello",
            ),
        ),
    },
)
