crates/core/talkbank-parser/src/parser/chat_file_parser/single_item/tests/word/tests/snapshots/word_parsing_tests__word_with_nonword_category.snap
---
source: crates/talkbank-parser/src/parser/chat_file_parser/single_item/tests/word/helpers.rs
expression: result
---
Ok(
    Word {
        span: Span {
            start: 0,
            end: 6,
        },
        word_id: None,
        raw_text: "&~gaga",
        content: WordContents(
            [
                Text(
                    WordText(
                        NonEmptyString(
                            "gaga",
                        ),
                    ),
                ),
            ],
        ),
        category: Some(
            Nonword,
        ),
        form_type: None,
        lang: None,
        part_of_speech: None,
        inline_bullet: None,
        cached_cleaned_text: CachedStr(
            OnceLock(
                "gaga",
            ),
        ),
    },
)
