crates/core/talkbank-parser/src/parser/chat_file_parser/single_item/tests/word/tests/snapshots/word_parsing_tests__word_with_omission_category.snap
---
source: crates/talkbank-parser/src/parser/chat_file_parser/single_item/tests/word/helpers.rs
expression: result
---
Ok(
    Word {
        span: Span {
            start: 0,
            end: 3,
        },
        word_id: None,
        raw_text: "0is",
        content: WordContents(
            [
                Text(
                    WordText(
                        NonEmptyString(
                            "is",
                        ),
                    ),
                ),
            ],
        ),
        category: Some(
            Omission,
        ),
        form_type: None,
        lang: None,
        part_of_speech: None,
        inline_bullet: None,
        cached_cleaned_text: CachedStr(
            OnceLock(
                "is",
            ),
        ),
    },
)
