crates/core/talkbank-parser/src/parser/chat_file_parser/single_item/tests/word/tests/snapshots/word_parsing_tests__word_with_phonological_fragment_category.snap
---
source: crates/talkbank-parser/src/parser/chat_file_parser/single_item/tests/word/helpers.rs
expression: result
---
Ok(
    Word {
        span: Span {
            start: 0,
            end: 4,
        },
        word_id: None,
        raw_text: "&+fr",
        content: WordContents(
            [
                Text(
                    WordText(
                        NonEmptyString(
                            "fr",
                        ),
                    ),
                ),
            ],
        ),
        category: Some(
            PhonologicalFragment,
        ),
        form_type: None,
        lang: None,
        part_of_speech: None,
        inline_bullet: None,
        cached_cleaned_text: CachedStr(
            OnceLock(
                "fr",
            ),
        ),
    },
)
